Revision history for Dist::Zilla::Plugin::Git

{{$NEXT}}
 - Require Dist::Zilla 2 (1.100900 needed DZ2, but didn't say so)

1.100960  2010-04-06 16:59:50 Europe/Paris
 - allow pushing to a different branch (graham barr)
 - allow multi-value args for @git (graham barr)
 - switch to dist-zilla-tester framework for tests (ricardo signes)

1.100900  2010-03-31 10:04:49 Europe/Paris
 - use a method modifier to set mvp_multivalue_args in Role::Git::DirtyFiles
   (This is required by Dist::Zilla 2.) (christopher madsen)

1.100760  2010-03-17 10:16:56 Europe/Paris
 - add a BeforeRelease check in Tag to prevent re-releases (christopher madsen)
 - Commit and Push now pass Git's output to log_debug (christopher madsen)

1.100750  2010-03-16 16:25:56 Europe/Paris
 - actually use commit_msg (christopher madsen)
 - Push now logs before pushing (christopher madsen)

1.100741  2010-03-15 18:48:31 Europe/Paris
 - documentation fix for new push_to param

1.100740  2010-03-15 17:28:12 Europe/Paris
 - WARNING: parameter "filename" renamed to "changelog"
 - let commit message include whitespace to next unindented line (david golden)
 - set up remote tracking branch during push testing (david golden)
 - remove unnecessary 'filename' arg from Push (david golden)
 - add 'push_to' argument to Push for multi-repo pushes (david golden)
 - give back user possibility to create lightweight tag, default remains
   annotated tags (christopher madsen)
 - allow user to change commit message (christopher madsen)
 - allow user to specify files allowed to be dirty for check & commit (christopher madsen)
 - refactored allow_dirty in dz:role:git:dirtyfiles (christopher madsen)

1.100690  2010-03-10 13:20:37 Europe/Paris
 - fix tests to work even when no global git config exists
 - refactored commit message generation (christopher madsen)

1.100681  2010-03-09 17:26:14 Europe/Paris
 - bumping minimum dzil version requirement

1.100680  2010-03-09 17:07:45 Europe/Paris